--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MB Engineering Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
     <h1>MB Engineering</h1>
     <p>Your Name | Engineering Technologist</p>
@@ -22,40 +23,47 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>This is where you write about your background and experience.</p>
+    <p>Hello! I'm an aspiring engineering technologist passionate about solving real-world problems through design, testing, and hands-on development. This site is a showcase of my work, resume, and reflections on school and job experiences.</p>
   </section>
 
   <section id="resume">
     <h2>Resume</h2>
+    <p>You can view or download my resume below.</p>
     <a href="resume.pdf" target="_blank">Download Resume</a>
   </section>
 
   <section id="gallery">
-    <h2>Gallery</h2>
-    <img src="assets/uploads/sample1.jpg" alt="Project Photo" />
-    <video controls>
-      <source src="assets/uploads/sample1.mp4" type="video/mp4" />
-      Your browser does not support video playback.
-    </video>
-    <a href="assets/uploads/sample.pdf" target="_blank">View Document</a>
+    <h2>Project Gallery</h2>
+    <div class="gallery">
+      <img src="assets/uploads/sample1.jpg" alt="Project Photo">
+      <video controls>
+        <source src="assets/uploads/sample1.mp4" type="video/mp4" />
+        Your browser does not support video playback.
+      </video>
+      <a href="assets/uploads/sample.pdf" target="_blank">View Project Document</a>
+    </div>
   </section>
 
   <section id="blog">
     <h2>Blog</h2>
     <article>
-      <h3>My Engineering Journey</h3>
-      <p>Write about your school or work experiences here.</p>
+      <h3>My First Internship</h3>
+      <p>I had the opportunity to work with a team of talented engineers during my first internship. We designed a test fixture, ran simulations, and even got hands-on in the lab. This experience helped me understand the value of prototyping and clear documentation.</p>
     </article>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: your.email@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your Profile</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
   </section>
 
   <footer>
     <p>© 2025 Your Name. All rights reserved.</p>
   </footer>
+
+  <!-- Link your JS at the end for better loading -->
+  <script src="script.js"></script>
 </body>
 </html>
+
