--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MB Engineering Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -38,14 +39,7 @@
     <section id="gallery" class="card">
       <h2>Project Gallery</h2>
       <div class="gallery">
-        <div>
-          <img src="assets/uploads/project1.jpg" alt="Project Photo" />
-          <p>Project Photo</p>
-        </div>
-        <div>
-          <img src="assets/uploads/project2.jpg" alt="Another Project" />
-          <p>Another Project</p>
-        </div>
+        <p>Loading...</p>
       </div>
     </section>
 
@@ -64,7 +58,7 @@
     <p>&copy; 2025 MB Engineering</p>
   </footer>
 
-  <!-- 🟢 Add Netlify Identity Widget to enable admin invite logins -->
+  <!-- Netlify Identity Widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <script>
     if (window.netlifyIdentity) {
@@ -77,6 +71,10 @@
       });
     }
   </script>
+
+  <!-- Project Loader Script -->
+  <script src="script.js"></script>
 </body>
 </html>
+
 
