--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <section id="gallery" class="card">
       <h2>Project Gallery</h2>
-      <div class="gallery">
-        <p>Loading...</p>
+      <div id="project-gallery" class="project-gallery">
+        <!-- Dynamic projects will be inserted here by script.js -->
       </div>
     </section>
 
@@ -76,5 +76,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
