--- a/admin/index.html
+++ b/admin/index.html
@@ -93,7 +93,14 @@
             try {
                 // 1. If an image is selected, upload it first
                 if (imageFile) {
-                    const uploadResponse = await fetch('/.netlify/functions/upload', {
+                    // Read the file as base64
+                    const base64 = await new Promise((resolve, reject) => {
+                        const reader = new FileReader();
+                        reader.onload = () => resolve(reader.result);
+                        reader.onerror = reject;
+                        reader.readAsDataURL(imageFile);
+                    });
+const uploadResponse = await fetch('/.netlify/functions/upload', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({
