Add full blog system with CRUD, inline image uploads, dynamic pages, and nav updates

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="gallery.html">Project Gallery</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -27,12 +27,17 @@
   <main>
     <section id="blog" class="card">
       <h2>Blog</h2>
-      <p>Check back soon for updates and stories from my engineering journey.</p>
+      <p class="section-intro">Updates, reflections, and stories from my engineering journey.</p>
+      <div class="gallery" id="blog-list">
+        <!-- Blog posts will be dynamically inserted here -->
+      </div>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 MB Engineering</p>
   </footer>
+
+  <script src="blog.js"></script>
 </body>
-</html> 
+</html>
