--- a/about.html
+++ b/about.html
@@ -26,15 +26,34 @@
 
   <main>
     <section id="about" class="card">
-      <h2>About Me</h2>
-      <p>
-        Hello! I'm an aspiring engineering technologist passionate about solving real-world problems through design, testing, and hands-on development. This site is a showcase of my work, resume, and reflections on school and job experiences.
-      </p>
+      <h2 id="aboutTitle">About Me</h2>
+      <div id="aboutContentContainer" class="markdown-content">
+        <p>Loading...</p>
+      </div>
     </section>
   </main>
 
   <footer>
     <p>&copy; 2025 MB Engineering</p>
   </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script>
+    async function loadAbout() {
+      try {
+        const res = await fetch('/content/about.json');
+        if (!res.ok) throw new Error('Failed to load about data');
+        const data = await res.json();
+
+        document.getElementById('aboutTitle').textContent = data.title || 'About Me';
+        document.getElementById('aboutContentContainer').innerHTML = marked.parse(data.content || '');
+      } catch (error) {
+        console.error('Error loading about:', error);
+        document.getElementById('aboutContentContainer').innerHTML = '<p>Hello! I\'m an aspiring engineering technologist passionate about solving real-world problems through design, testing, and hands-on development. This site is a showcase of my work, resume, and reflections on school and job experiences.</p>';
+      }
+    }
+
+    loadAbout();
+  </script>
 </body>
-</html> 
+</html>
