--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,7 @@
     <p>&copy; 2025 MB Engineering</p>
   </footer>
 
+  <script src="script.js"></script>
   <script src="blog.js"></script>
 </body>
 </html>
