--- a/project.html
+++ b/project.html
@@ -39,6 +39,7 @@
     <p>&copy; 2025 MB Engineering</p>
   </footer>
 
+  <script src="script.js"></script>
   <script src="project.js"></script>
 </body>
 </html>
