--- a/about.html
+++ b/about.html
@@ -29,8 +29,7 @@
       <div class="card about-card">
         <div class="about-layout">
           <div class="about-photo">
-            <!-- Replace with your headshot image -->
-            <img src="assets/uploads/headshot.jpg" alt="Photo of Matt Banzhof">
+            <img src="assets/uploads/headshot.jpg" alt="Matt Banzhof portrait">
           </div>
 
           <div class="about-content">
@@ -46,6 +45,8 @@
             <div class="about-cta-row">
               <a href="resume.html" class="about-btn about-btn-primary">View Resume</a>
               <a href="gallery.html" class="about-btn about-btn-secondary">View Project Gallery</a>
+              <a href="blog.html" class="about-btn about-btn-secondary">Read the Blog</a>
+              <a href="contact.html" class="about-btn about-btn-secondary">Contact Me</a>
             </div>
           </div>
         </div>
@@ -57,6 +58,8 @@
     <p>&copy; 2025 MB Engineering</p>
   </footer>
 
+  <!-- Site-wide scripts -->
+  <script src="script.js"></script>
   <!-- Markdown renderer + About loader -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="about.js"></script>
