--- a/post.html
+++ b/post.html
@@ -40,6 +40,7 @@
     <p>&copy; 2025 MB Engineering</p>
   </footer>
 
+  <script src="script.js"></script>
   <script src="post.js"></script>
 </body>
 </html>
