--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <a href="index.html" class="home-link">
-      <h1>MB Engineering</h1>
-      <p>Your Name | Engineering Technologist</p>
+      <h1 class="site-title">MB Engineering</h1>
+      <p class="site-subtitle">Your Name | Engineering Technologist</p>
     </a>
     <nav>
       <ul>
@@ -24,35 +24,30 @@
     </nav>
   </header>
 
-  <main class="content">
-    <section class="about-page">
-      <header class="about-header">
-        <h1 id="about-title">About Me</h1>
-        <p id="about-tagline" class="about-tagline">
+  <section class="page-hero about-hero">
+    <div class="page-hero-inner">
+      <div class="about-hero-text">
+        <h1 id="aboutPageTitle">About</h1>
+        <p id="aboutTagline" class="about-tagline">
           Electrical Engineering Technologist · R&amp;D · Prototyping · PCB Design
         </p>
-      </header>
+      </div>
+      <div class="about-hero-avatar-wrapper">
+        <img id="aboutHeroAvatar" class="about-avatar" alt="Portrait of Matt Banzhof" style="display:none;">
+      </div>
+    </div>
+  </section>
 
-      <div class="about-layout">
-        <div class="about-avatar-wrapper">
-          <img
-            src="assets/uploads/headshot.jpg"
-            alt="Matt Banzhof portrait"
-            class="about-avatar"
-          />
-        </div>
+  <main>
+    <section class="content">
+      <div class="card about-card">
+        <div id="aboutBody" class="markdown-content"></div>
 
-        <div class="about-content-wrapper">
-          <div id="about-body" class="markdown-content about-body">
-            <!-- Filled dynamically from content/about.json -->
-          </div>
-
-          <div class="about-cta-group">
-            <a href="resume.html" class="btn-about btn-about-primary">View Resume</a>
-            <a href="gallery.html" class="btn-about btn-about-secondary">View Project Gallery</a>
-            <a href="blog.html" class="btn-about btn-about-secondary">Read Blog</a>
-            <a href="contact.html" class="btn-about btn-about-secondary">Contact Me</a>
-          </div>
+        <div class="about-cta-row">
+          <a href="resume.html" class="btn-primary-pill">View Resume</a>
+          <a href="gallery.html" class="btn-ghost">View Project Gallery</a>
+          <a href="blog.html" class="btn-ghost">Read Blog</a>
+          <a href="contact.html" class="btn-ghost">Contact Me</a>
         </div>
       </div>
     </section>
@@ -63,6 +58,7 @@
   </footer>
 
   <!-- Site-wide scripts -->
+  <script src="site.js"></script>
   <script src="script.js"></script>
   <!-- Markdown renderer + About loader -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
