--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <a href="index.html" class="home-link">
-      <h1>MB Engineering</h1>
-      <p>Your Name | Engineering Technologist</p>
+      <h1 class="site-title">MB Engineering</h1>
+      <p class="site-subtitle">Your Name | Engineering Technologist</p>
     </a>
     <nav>
       <ul>
@@ -60,6 +60,7 @@
     <p>© 2025 MB Engineering</p>
   </footer>
 
+  <script src="site.js"></script>
   <script src="script.js"></script>
   <!-- Netlify Identity Widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
