--- a/resume.html
+++ b/resume.html
@@ -10,8 +10,8 @@
 <body>
   <header>
     <a href="index.html" class="home-link">
-      <h1>MB Engineering</h1>
-      <p>Your Name | Engineering Technologist</p>
+      <h1 class="site-title">MB Engineering</h1>
+      <p class="site-subtitle">Your Name | Engineering Technologist</p>
     </a>
     <nav>
       <ul>
@@ -36,6 +36,7 @@
     <p>&copy; 2025 MB Engineering</p>
   </footer>
 
+  <script src="site.js"></script>
   <script src="script.js"></script>
 </body>
 </html> 
