--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="home-link">
-      <h1 class="site-title">MB Engineering</h1>
-      <p class="site-subtitle">Your Name | Engineering Technologist</p>
+    <a href="index.html" class="home-link" data-dynamic>
+      <h1 class="site-title"></h1>
+      <p class="site-subtitle"></p>
     </a>
     <nav>
       <ul>
@@ -26,21 +26,19 @@
 
   <main>
     <section class="content">
-      <div class="card about-card">
+      <div id="aboutContentWrapper" data-dynamic class="card about-card">
         <!-- Hero band inside the card -->
         <div class="about-hero">
           <div class="about-hero-inner">
-            <h1 id="aboutPageTitle" class="about-hero-title">About</h1>
-            <p id="aboutTagline" class="about-hero-tagline">
-              Electrical Engineering Technologist · R&amp;D · Prototyping · PCB Design
-            </p>
+            <h1 id="aboutPageTitle" class="about-hero-title"></h1>
+            <p id="aboutTagline" class="about-hero-tagline"></p>
           </div>
         </div>
 
         <!-- Two-column layout: avatar + content -->
         <div class="about-layout">
           <div class="about-avatar-wrapper">
-            <img id="aboutAvatar" class="about-avatar" src="" alt="Portrait of Matt Banzhof">
+            <img id="aboutAvatar" class="about-avatar" src="" alt="Portrait">
           </div>
           <div class="about-body">
             <div id="aboutBody" class="markdown-content"></div>
