--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <header>
-    <a href="index.html" class="home-link">
-      <h1 class="site-title">MB Engineering</h1>
-      <p class="site-subtitle">Your Name | Engineering Technologist</p>
+    <a href="index.html" class="home-link" data-dynamic>
+      <h1 class="site-title"></h1>
+      <p class="site-subtitle"></p>
     </a>
     <nav>
       <ul>
