--- a/index.html
+++ b/index.html
@@ -25,34 +25,42 @@
   </header>
 
   <main>
-    <section id="about" class="card">
-      <h2>About Me</h2>
-      <p>
-        Hello! I'm an aspiring engineering technologist passionate about solving real-world problems through design, testing, and hands-on development. This site is a showcase of my work, resume, and reflections on school and job experiences.
-      </p>
-    </section>
-
-    <section id="resume" class="card">
-      <h2>Resume</h2>
-      <p>You can view or download my resume below.</p>
-      <a href="assets/uploads/YourName_Resume.pdf" target="_blank">Download Resume</a>
-    </section>
-
-    <section id="gallery" class="card">
-      <h2>Project Gallery</h2>
-      <div class="gallery" id="gallery-container">
-        <!-- Projects will be dynamically inserted here -->
+    <!-- Hero Section -->
+    <section class="hero-landing">
+      <div class="hero-content">
+        <h2 class="hero-headline">Engineering Technologist</h2>
+        <p class="hero-tagline">
+          Specializing in R&D, prototyping, PCB design, and turning concepts into working systems.
+        </p>
+        <div class="hero-cta">
+          <a href="about.html" class="btn-primary-pill">Learn More About Me</a>
+          <a href="gallery.html" class="btn-ghost">View My Projects</a>
+        </div>
       </div>
     </section>
 
-    <section id="blog" class="card">
-      <h2>Blog</h2>
-      <p>Check back soon for updates and stories from my engineering journey.</p>
-    </section>
-
-    <section id="contact" class="card">
-      <h2>Contact</h2>
-      <p>Email me at <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    <!-- Quick Links Grid -->
+    <section class="quick-links">
+      <a href="gallery.html" class="quick-link-card">
+        <span class="quick-link-icon">🔧</span>
+        <h3>Project Gallery</h3>
+        <p>Explore my engineering projects and prototypes</p>
+      </a>
+      <a href="blog.html" class="quick-link-card">
+        <span class="quick-link-icon">📝</span>
+        <h3>Blog</h3>
+        <p>Insights and updates from my engineering journey</p>
+      </a>
+      <a href="resume.html" class="quick-link-card">
+        <span class="quick-link-icon">📄</span>
+        <h3>Resume</h3>
+        <p>View my professional experience and skills</p>
+      </a>
+      <a href="contact.html" class="quick-link-card">
+        <span class="quick-link-icon">✉️</span>
+        <h3>Contact</h3>
+        <p>Get in touch for opportunities or questions</p>
+      </a>
     </section>
   </main>
 
