bug fix contact page

--- a/contact.html
+++ b/contact.html
@@ -30,22 +30,24 @@
         <!-- Hero band -->
         <div class="contact-hero">
           <div class="contact-hero-inner">
-            <h1 id="contactPageTitle" class="contact-hero-title"></h1>
-            <p id="contactIntro" class="contact-hero-tagline"></p>
+            <h1 id="contactPageTitle" class="contact-hero-title">Contact</h1>
+            <p id="contactIntro" class="contact-hero-tagline">Let's connect.</p>
           </div>
         </div>
 
         <!-- Body -->
         <div class="contact-layout">
           <div class="contact-body">
-            <div id="contactBody" class="markdown-content"></div>
+            <div id="contactBody" class="markdown-content">
+              <p>If you'd like to talk about projects, collaboration, or opportunities, feel free to reach out by email.</p>
+            </div>
 
             <div class="contact-email-block">
               <span class="contact-email-label">Email</span>
               <a id="contactEmailLink"
-                 href="mailto:youremail@example.com"
+                 href="mailto:mattbanzhof@gmail.com"
                  class="contact-email-link">
-                youremail@example.com
+                mattbanzhof@gmail.com
               </a>
             </div>
           </div>
